--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,1 +1,8 @@
-<p>todos works!</p>
+<div class="todos">
+    {{ title }}
+    <div class="todo">
+        <div class="id">0</div>
+        <div class="content">My todo</div>
+        <button class="delete">Remove</button>
+    </div>
+</div>
